2004-09-16  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/xdgmimeglob.c:
	* libgnomevfs/xdgmimemagic.c: fix memleaks (sync with upstream),
	  fixes #152768 and #152771

2004-09-16  Alexander Larsson  <alexl@redhat.com>

	* modules/ftp-method.c:
	Include the right gssapi headers.

2004-09-16  Kjartan Maraas  <kmaraas@gnome.org>

	* modules/ftp-method.c: Fix debugging define
	so it doesn't create leaks. Closes bug #152811.

2004-09-15  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomevfs/gnome-vfs-mime-info.c: (handle_mime_info):
	Plug one more leak. Closes bug #152754.

2004-09-15  Christian Kellner  <gicmo@gnome-de.org>

	* modules/http-neon-method.c (http_get_file_info):
	Be a little more cautious and fall back to HEAD in any
	case except a 207 result. This should fix bug #152577 and
	also make gtik (the stock ticker applet) working again.

2004-09-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/Makefile.am:
	AC_SUBST GSSAPI_* vars, and use them

2004-09-14  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
	* libgnomevfs/gnome-vfs-volume-monitor-client.h:
	* libgnomevfs/gnome-vfs-volume-monitor.c:
	Allow unreffing the volume monitor after shutdown.

2004-09-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Make kerberos detection actually work
	
	* modules/ftp-method.c: (try_kerberos), (ftp_connection_create):
	Fail before requesting a password if we can't even
	connect to the ftp site.

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.8.0 ===

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	* configure.in:
	Update for 2.8.0

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* modules/Makefile.am:
	Properly dist both http methods.
	Patch from Rodney Dawes

2004-09-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_get_value):