@@ -132,9 +132,11 @@ Container for GnomeVFSVolume (floppy drive, CD reader, ...)
 
 </para>
 
-@volume: 
+@drive: 
 @callback: 
 @user_data: 
+<!-- # Unused Parameters # -->
+@volume: 
 
 
 <!-- ##### FUNCTION gnome_vfs_drive_get_activation_uri ##### -->
